# shockland

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  Taskfile.yml  shockland.ioc
Core/Inc/: main.h  msp.h  msp_protocol.h  softcrc.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  streambuf.h  tim.h
Core/Src/: adc.c  dma.c  gpio.c  main.c  msp.c  softcrc.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  streambuf.c  system_stm32f1xx.c  tim.c  usart.c
